--- a/README.Rmd
+++ b/README.Rmd
@@ -22,9 +22,9 @@
 - Do not get a version that is frozen
 
 ## Mac OSX
-- Xcode
+- `Xcode`
     - https://developer.apple.com/xcode/
-- gfortran
+- `gfortran`
     - https://r.research.att.com/libs/gfortran-4.8.2-darwin13.tar.bz2
     - sudo `tar -zxf gfortran-4.8.2-darwin13.tar.bz2 -C /`
 
